--- a/main.css
+++ b/main.css
@@ -227,8 +227,6 @@ img {
     justify-content: center;
     align-items: center;
     display: flex;
-
-
 }
 
 .phone {
@@ -309,11 +307,12 @@ svg path {
 .sessions-tab-link {
     border: 1px solid var(--dark-gray-50);
     background-color: rgba(0, 0, 0, 0);
-    border-radius: 50px;
+    border-radius: 10px;
     padding: 10px 22px;
 
     font-size: 18px !important;
     font-weight: 500;
+    margin: 5px 0 !important;
 }
 
 .sessions-tab-link:hover {
@@ -323,8 +322,8 @@ svg path {
 
 .sessions-tab-link.active {
     border-color: var(--primary);
-    color: var(--primary-dark);
-    background-color: rgba(0, 0, 0, 0);
+    color: #000;
+    background-color: #f4e7e1;
 }
 
 .sessions-tab-link.active:hover {
@@ -369,7 +368,7 @@ svg path {
 .shop-link-block {
     border-radius: 20px;
     width: 100%;
-    height: 400px;
+    height: 300px;
 
     position: relative;
     overflow: hidden;
@@ -418,13 +417,13 @@ svg path {
 
 .logo-bigger {
     width: auto;
-    height: 80px;
+    height: 100px;
 }
 
 @media screen and (min-width: 1280px) {
     .section {
-        padding-top: 120px;
-        padding-bottom: 120px;
+        padding-top: 50px;
+        padding-bottom: 50px;
     }
 
     .shop-collection-list {
@@ -441,12 +440,8 @@ svg path {
 
 @media screen and (max-width: 991px) {
 
-    .header {
-        padding-top: 60px;
-    }
-
     .header-social-icons-wrapper {
-        margin-top: 10px;
+      margin: 20px 0;
     }
 
     .header-logo-wrapper {
@@ -470,8 +465,8 @@ svg path {
     }
 
     .header {
-        padding-top: 40px;
-        padding-bottom: 60px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     .header-brand {
@@ -496,7 +491,6 @@ svg path {
 
     .header-social-icons-wrapper {
         justify-content: center;
-        margin-top: 0;
     }
 
     .header-logo-wrapper {
