--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ html {
 
 body {
     color: #333;
-    background-color: #fff;
+    background-color: #fcfcfc;
     min-height: 100%;
     margin: 0;
     font-family: Arial, sans-serif;
@@ -258,8 +258,8 @@ img {
     text-decoration: none;
     transition: all .3s;
 
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 }
 
 .header-social-icon svg {
@@ -267,16 +267,6 @@ img {
     height: 100%;
     object-fit: contain;
     -o-object-fit: contain;
-}
-
-svg path {
-    transition: all .2s;
-}
-
-.header-social-icon:hover path {
-    /* fill: #f8f7f5; */
-    fill: #b52f2f;
-    stroke: #b52f2f;
 }
 
 .header-logo-wrapper {
@@ -340,6 +330,16 @@ svg path {
 
 .shop-collection-item {
     width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background: #fff;
+    overflow: hidden;
+}
+
+.info {
+    padding: 10px;
+    text-align: center;
 }
 
 .shop-tabs-menu {
@@ -366,7 +366,6 @@ svg path {
 }
 
 .shop-link-block {
-    border-radius: 20px;
     width: 100%;
     height: 300px;
 
@@ -377,7 +376,6 @@ svg path {
 
 .shop-list-image {
     object-fit: cover;
-    border-radius: 20px;
     width: 100%;
     height: 100%;
     transition: transform .3s;
@@ -398,7 +396,7 @@ svg path {
 
 .shop-item-link {
     font-family: Cormorant, sans-serif;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 700;
 }
 
@@ -412,12 +410,12 @@ svg path {
 
 .shop-item-short-info {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .logo-bigger {
     width: auto;
-    height: 100px;
+    height: 120px;
 }
 
 @media screen and (min-width: 1280px) {
@@ -441,7 +439,7 @@ svg path {
 @media screen and (max-width: 991px) {
 
     .header-social-icons-wrapper {
-      margin: 20px 0;
+        margin: 20px 0;
     }
 
     .header-logo-wrapper {
@@ -465,8 +463,8 @@ svg path {
     }
 
     .header {
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 30px;
+        padding-bottom: 10px;
     }
 
     .header-brand {
@@ -478,15 +476,14 @@ svg path {
         padding-bottom: 30px;
     }
 
-    .header-top-wrapper {
-        margin-bottom: 30px;
-    }
 }
 
 @media screen and (max-width: 479px) {
 
     .header {
         text-align: left;
+        border-bottom-left-radius: 30px;
+        border-bottom-right-radius: 30px;
     }
 
     .header-social-icons-wrapper {
