--- a/main.css
+++ b/main.css
@@ -333,7 +333,8 @@ img {
     border: 1px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background: #fff;
+    background-color: #f2f2f2;
+
     overflow: hidden;
 }
 
@@ -367,7 +368,7 @@ img {
 
 .shop-link-block {
     width: 100%;
-    height: 500px;
+    height: 350px;
 
     position: relative;
     overflow: hidden;
@@ -392,6 +393,7 @@ img {
 
 .shop-item-price {
     margin-top: 10px;
+    font-weight: 600;
 }
 
 .shop-item-link {
