--- a/main.css
+++ b/main.css
@@ -368,7 +368,7 @@ img {
 
 .shop-link-block {
     width: 100%;
-    height: 350px;
+    height: 300px;
 
     position: relative;
     overflow: hidden;
@@ -412,7 +412,9 @@ img {
 
 .shop-item-short-info {
     margin-top: 10px;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 .logo-bigger {
